--- a/scss/mobile/fkb-m-topic-list.scss
+++ b/scss/mobile/fkb-m-topic-list.scss
@@ -194,6 +194,7 @@ body.nav-controls-hidden {
 // Topic List
 
 .topic-list {
+  padding-block-end: 120px !important; // Prevent overlapping by bottom floating elements
   .topic-excerpt {
     width: 100%;
   }
